--- a/src/app/components/book-list/book-list.component.html
+++ b/src/app/components/book-list/book-list.component.html
@@ -1,4 +1,6 @@
 <mat-list role="list">
+    <h3 mat-subheader>{{label}}</h3>
+
     <mat-list-item  *ngFor="let book of books" role="listitem" (click)="select.emit(book.id)">
       <app-book-item  [book]="book"></app-book-item>
     </mat-list-item>
