Добавлено редактирование, мелкие правки. Красота

--- a/src/app/components/book-dialog/book-dialog.component.html
+++ b/src/app/components/book-dialog/book-dialog.component.html
@@ -51,8 +51,8 @@
         </div>
     </form>
 </div>
-<div mat-dialog-actions>
+<div mat-dialog-actions class="pt-5">
     <button mat-button mat-dialog-close>Отменить</button>
 
-    <button mat-button [mat-dialog-close] (click)="saveBook()" color="primary" cdkFocusInitial>Сохранить</button>
+    <button mat-button (click)="saveBook()" color="primary" cdkFocusInitial>Сохранить</button>
 </div>
