--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,13 +2,11 @@
 <main class="container">
   <div class="col-xl-12">
     <section class="col-xl-6 d-inline-flex">
-      <div>
-        <button mat-button color="primary" (click)='openDialog()'>Добавить книгу</button>
-      </div>
-      <app-book-list [books]="books$ | async" [label]="'Список книг'" (select)="onSelect($event)"></app-book-list>
+        
+      <app-book-list [books]="books$ | async" (add)="onOpenAddBook()" [label]="'Список книг'" (select)="onSelect($event)"></app-book-list>
     </section>
     <section class="col-xl-6 d-inline-flex">
-      <app-book-selected [book]="selected$ | async"></app-book-selected>
+      <app-book-selected (delete)="onDelete($event)" (edit)="onOpenEditBook($event)" [book]="selected$ | async"></app-book-selected>
     </section>
   </div>
 </main>
